Fix float button z-index for android

--- a/src/android/style/button.less
+++ b/src/android/style/button.less
@@ -42,6 +42,7 @@ button {
 
   &.button-float {
     position: fixed;
+    z-index: 100;
     display: block;
     right: 16px;
     bottom: 16px;
